# EP-inteligentes-2023.2

./: .gitignore  .python-version  README.md  pyproject.toml
ep_inteligentes_2023/: io.py  no_pretraining.py
ep_inteligentes_2023/.jukit/: .jukit_info.json  io_outhist.json
scripts/: manual_classification.py
