[tool.poetry]
name = "ep-inteligentes-2023-2"
version = "0.1.0"
description = ""
authors = ["Luís Henrique de Almeida Fernandes <luish.fernandes@usp.br>"]
readme = "README.md"
packages = [{include = "ep_inteligentes_2023"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
torch = "2.0.0"
torchmetrics = "^1.2.0"
pandas = "^2.1.1"
matplotlib = "^3.8.0"
tqdm = "^4.66.1"
opencv-python = "^4.8.1.78"
numpy = "^1.26.0"
icecream = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
